# importlib-resources

./: .gitignore  LICENCE  README.md
archs/: pyproject.toml
archs/archs/core/: resnet.py
pkg/: pyproject.toml
pkg/pkg/: train.py
