[tool.poetry]
name = "archs"
version = "0.1.0"
description = ""
authors = ["gatheluck <gatheluck+tech@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
flake8 = "^3.8.4"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
