[tool.poetry]
name = "pkg"
version = "0.1.0"
description = ""
authors = ["gatheluck <gatheluck+tech@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
archs = {path = "../archs"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
